# lazypost4J

./: .gitignore  Cargo.toml  DEVELOPMENT.md  HOMEBREW_RELEASE.md  LICENSE-MIT  README.md  api_tui_v_1_prd_and_srd.md
Formula/: lazypost.rb
scripts/: update_homebrew_formula.sh
src/: cli.rs  http_exec.rs  main.rs  model.rs  user_config.rs
src/scanner/: class_fields.rs  javadoc.rs  lazy_body.rs  mod.rs  params.rs  parse.rs  source_index.rs  spring.rs  swagger_openapi.rs
src/tui/: app.rs  body_cursor.rs  dir_picker.rs  mod.rs
tests/fixtures/body_cross_file/src/main/java/demo/: CrossController.java  MessageDto.java
tests/fixtures/spring_mvc/src/main/java/demo/: DemoController.java
tests/fixtures/swagger_style/src/main/java/demo/: FinPaymentBillController.java
