[package]
name = "lazypost"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Spring MVC/Boot API scanner and debugger TUI (macOS/Linux)"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
anyhow = "1.0"
dirs = "5.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
rayon = "1.10"
regex = "1.11"
tree-sitter = "0.24"
tree-sitter-java = "0.23.5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
